# veclibm

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  run_test  rvvlm_expD.c  rvvlm_expD_tbl.c  test_funcs.c  test_infra.c
.github/workflows/: build_and_test.yml  clang-format.yml
CMakeToolchain/: riscv.clang.cross.cmake
include/: foo.h  rvvlm.h  rvvlm_acoshD.inc.h  rvvlm_asincosD.inc.h  rvvlm_asinhcoshD.inc.h  rvvlm_atan2D.inc.h  rvvlm_atanD.inc.h  rvvlm_atanhD.inc.h  rvvlm_cbrtD.inc.h  rvvlm_cdfnorminvD.inc.h  rvvlm_erfD.inc.h  rvvlm_erfcD.inc.h  rvvlm_erfcinvD.inc.h  rvvlm_erfinvD.inc.h  rvvlm_errorfuncsD.h  rvvlm_expD.h  rvvlm_expD.inc.h  rvvlm_expint1D.inc.h  rvvlm_expm1D.inc.h  rvvlm_fp.inc.h  rvvlm_fp64m1.h  rvvlm_fp64m2.h  rvvlm_fp64m4.h  rvvlm_gammafuncsD.h  rvvlm_hyperbolicsD.h  rvvlm_inverrorfuncsD.h  rvvlm_invhyperD.h  rvvlm_lgammaD.inc.h  rvvlm_log1pD.inc.h  rvvlm_logD.inc.h  rvvlm_powD.inc.h  rvvlm_sinandcosD.inc.h  rvvlm_sincosD.inc.h  rvvlm_sinhcoshD.inc.h  rvvlm_tanD.inc.h  rvvlm_tanhD.inc.h  rvvlm_tgammaD.inc.h  rvvlm_trigD.h  test_infra.h
src/: rvvlm_2ovpi_tbl.c  rvvlm_acosD.c  rvvlm_acosDI.c  rvvlm_acoshD.c  rvvlm_acoshDI.c  rvvlm_acospiD.c  rvvlm_acospiDI.c  rvvlm_asinD.c  rvvlm_asinDI.c  rvvlm_asinhD.c  rvvlm_asinhDI.c  rvvlm_asinpiD.c  rvvlm_asinpiDI.c  rvvlm_atan2D.c  rvvlm_atan2DI.c  rvvlm_atan2piD.c  rvvlm_atan2piDI.c  rvvlm_atanD.c  rvvlm_atanDI.c  rvvlm_atanhD.c  rvvlm_atanhDI.c  rvvlm_atanpiD.c  rvvlm_atanpiDI.c  rvvlm_cbrtD.c  rvvlm_cbrtDI.c  rvvlm_cdfnormD.c  rvvlm_cdfnormDI.c  rvvlm_cdfnorminvD.c  rvvlm_cdfnorminvDI.c  rvvlm_cosD.c  rvvlm_cosDI.c  rvvlm_coshD.c  rvvlm_coshDI.c  rvvlm_cospiD.c  rvvlm_cospiDI.c  rvvlm_erfD.c  rvvlm_erfDI.c  rvvlm_erfcD.c  rvvlm_erfcDI.c  rvvlm_erfcinvD.c  (+46 more)
test/: CMakeLists.txt
test/include/: near_NPiby2_tbl.h  test_infra.h
test/src/: test_acos.cpp  test_acosI.cpp  test_acosh.cpp  test_acoshI.cpp  test_acospi.cpp  test_acospiI.cpp  test_asin.cpp  test_asinI.cpp  test_asinh.cpp  test_asinhI.cpp  test_asinpi.cpp  test_asinpiI.cpp  test_atan.cpp  test_atan2.cpp  test_atan2I.cpp  test_atan2pi.cpp  test_atan2piI.cpp  test_atanI.cpp  test_atanh.cpp  test_atanhI.cpp  test_atanpi.cpp  test_atanpiI.cpp  test_cbrt.cpp  test_cbrtI.cpp  test_cdfnorm.cpp  test_cdfnormI.cpp  test_cdfnorminv.cpp  test_cdfnorminvI.cpp  test_cos.cpp  test_cosI.cpp  test_cosh.cpp  test_coshI.cpp  test_cospi.cpp  test_cospiI.cpp  test_erf.cpp  test_erfI.cpp  test_erfc.cpp  test_erfcI.cpp  test_erfcinv.cpp  test_erfcinv.foo  (+43 more)
tools/: run-clang-format.py
